Branch 2010-22-04 (rev 1123-1129)
 - Introduced --autoflush=C to restart the daemon after parsing C inputs
 - Introduced --keepTeX to preserve TeX formula source as MathML annotation
 - Bootstrapped $source when read on input, to facilitate redirecting to pipes.
Branch 2010-19-04 (rev 1122)
 - Refactored latexmldaemon to have 3 "--mode"s: math,standard and fragment
 - Introduced latexmlmath functionality, tirggered by --math=mode
 - Added digestStringDaemonized to LaTeXML.pm (no state initialization)
 - renamed binary to "latexmld"
Branch 2010-18-04 (rev 1119-1121)
 - Beta version of latexmldaemon, tested on first 100,000 ZBL abstracts
 - Introduced --standard option, for heterogeneous sources on input
 - Added missing eval {} wrappers to capture Fatals in serialization and
   postprocessing
 - Improved bookkeeping in the daemonized digesting subroutines at LaTeXML.pm
 - Smaller fixes at bin/latexmldaemon binary 
Branch 2010-13/14-04 (rev 1112-1118)
 - Alpha version of the latexmldaemon (not documented yet)
   To this end, introduced a new binary and two new subroutines at
   LaTeXML.pm (digestFileDaemonized, digestBibTeXFileDaemonized)
 - Upgrades to latexmldaemon:
  * introduced --log option on input
  * Allowed #name,#dir and #ext patterns in --log and --destination
  * Wrapped digestion in eval {} to persist through fatal errors.
  * pushFrame and popFrame used to properly sandbox state
Branch 2010-06-04 (rev 1111)
 - adding the global $STATE variable "SOURCEBASE".
   As opposed to SOURCEFILE, it is to be used as an id,
   containing the base of the source filename(s). Particularly useful
   for providing a global reference to multi-source inputs.
Branch 2010-19-02 (rev 1090)
 - adding a bootstrap for empty Box at MathParser.pm failureReport (r1091)
 - adding sources attribute to ltx:graphics elements in graphic[sx].sty.ltxml (r1090)
 - switching locator message to XPointer style at Mouth.pm (r1086)